pkg/lang/testdata/ub/stack-values/valid/input-local-in-comprehension.ub
locals: { region: 'us-east-1' }

factory: {
  inputs: {
    names: [ for n in ['a', 'b'] : $'{{n}}.{{local.region}}' ]
  }
}
