pkg/lang/testdata/ub/stack-values/invalid/locals-input-reference.ub
locals: { region: input.region }

factory: {
  inputs: { region: 'us-east-1' }
}
